--- a/css/page3.css
+++ b/css/page3.css
@@ -43,6 +43,7 @@ a {
 
 .shadow {
   box-shadow: rgba(28, 29, 29, 0.08) 0 0.75em 1.5em;
+  overflow: clip;
 }
 
 .breadcrumbs {
@@ -330,16 +331,23 @@ a {
 .info__gameplace {
   background-color: white;
   margin: 15px 0;
+  padding: 20px;
 }
 .info__gameplacetitle {
   font-size: 18px;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e2e2e2;
+  display: flex;
+  align-items: center;
 }
 .info__gameplacetitle img {
   width: 20px;
   height: 20px;
+  margin-right: 10px;
 }
 .info__gameplacecontent {
   font-weight: 400;
+  padding: 1rem;
 }
 .info__gameplacecontent img {
   width: 300px;
@@ -348,6 +356,58 @@ a {
 .info__box {
   margin: 15px 0;
   background-color: white;
+  padding: 20px;
+}
+
+.previous {
+  text-align: center;
+}
+.previous__title {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  background-color: #1c1d1d;
+  color: white;
+}
+.previous__title img {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.previous__menu {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  background-color: #434343;
+  color: white;
+}
+.previous__menuleft {
+  width: 50%;
+}
+.previous__menuright {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+}
+.previous__item {
+  display: flex;
+  justify-content: space-around;
+  padding: 15px;
+}
+.previous__item:nth-child(odd) {
+  background-color: #eff0f0;
+}
+.previous__item:nth-child(even) {
+  background-color: white;
+}
+.previous__itemleft, .previous__itemright {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+}
+.previous__item img {
+  width: 20px;
+  height: 20px;
 }
 
 @media only screen and (min-width: 660px) {
@@ -376,7 +436,6 @@ a {
     border-bottom: 6px solid red;
   }
   .info {
-    border: solid;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -389,5 +448,55 @@ a {
   .info__box:nth-child(1) {
     grid-row: 2/3;
     grid-column: 1/2;
+  }
+  .previous {
+    text-align: center;
+  }
+  .previous__title {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    background-color: #1c1d1d;
+    color: white;
+  }
+  .previous__title img {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+  }
+  .previous__menu {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    background-color: #434343;
+    color: white;
+  }
+  .previous__menuleft {
+    width: 50%;
+  }
+  .previous__menuright {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+  }
+  .previous__item {
+    display: flex;
+    justify-content: space-around;
+    padding: 15px;
+  }
+  .previous__item:nth-child(odd) {
+    background-color: #eff0f0;
+  }
+  .previous__item:nth-child(even) {
+    background-color: white;
+  }
+  .previous__itemleft, .previous__itemright {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+  }
+  .previous__item img {
+    width: 20px;
+    height: 20px;
   }
 }/*# sourceMappingURL=page3.css.map */
