--- a/css/page3.scss
+++ b/css/page3.scss
@@ -40,6 +40,7 @@ a {
 
 .shadow {
   box-shadow: rgb(28 29 29 / 8%) 0 0.75em 1.5em;
+  overflow: clip;
 }
 
 .breadcrumbs {
@@ -157,7 +158,7 @@ a {
         line-height: 21px;
         padding: 0 0.2rem;
       }
-      &span{
+      &span {
         position: relative;
         display: flex;
         color: white;
@@ -282,7 +283,7 @@ a {
             line-height: 21px;
             padding: 0 0.3rem;
           }
-          &span{
+          &span {
             position: relative;
             display: flex;
           }
@@ -390,36 +391,97 @@ a {
 }
 
 .info {
-
-
   &__gameplace {
     background-color: white;
     margin: 15px 0;
-    
-    
-
+    padding: 20px;
     &title {
       font-size: 18px;
+      padding-bottom: 1rem;
+      border-bottom: 1px solid #e2e2e2;
+      display: flex;
+      align-items: center;
       img {
         width: 20px;
         height: 20px;
+        margin-right: 10px;
       }
     }
 
     &content {
       font-weight: 400;
-      
+      padding: 1rem;
 
       img {
         width: 300px;
         height: 300px;
       }
     }
-    
   }
-  &__box{
+  &__box {
     margin: 15px 0;
     background-color: white;
+    padding: 20px;
+  }
+}
+
+.previous {
+  text-align: center;
+
+  &__title {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    background-color: #1c1d1d;
+    color: white;
+    img {
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
+    }
+  }
+
+  &__menu {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    background-color: #434343;
+    color: white;
+
+    &left {
+      width: 50%;
+    }
+    &right {
+      display: flex;
+      justify-content: space-around;
+      width: 50%;
+    }
+  }
+
+  &__item {
+    display: flex;
+    justify-content: space-around;
+    padding: 15px;
+
+    &:nth-child(odd) {
+      background-color: #eff0f0;
+    }
+
+    &:nth-child(even) {
+      background-color: white;
+    }
+
+    &left,
+    &right {
+      display: flex;
+      justify-content: space-around;
+      width: 50%;
+    }
+
+    img {
+      width: 20px;
+      height: 20px;
+    }
   }
 }
 
@@ -462,27 +524,81 @@ a {
   }
 
   .info {
-    border: solid;
     display: grid;
-      //grid-template-columns: repeat(2, 1fr);
-      //grid-template-rows: repeat(3, 1fr);
+    //grid-template-columns: repeat(2, 1fr);
+    //grid-template-rows: repeat(3, 1fr);
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr ;
-      
+    grid-template-rows: 1fr 1fr 1fr;
+
     grid-column-gap: 20px;
-  
+
     &__gameplace {
       grid-column: 1/2;
       grid-row: 1/3;
-      
     }
-    &__box:nth-child(1){
+    &__box:nth-child(1) {
       grid-row: 2/3;
       grid-column: 1/2;
-
     }
-
-
   }
 
+  .previous {
+    text-align: center;
+
+    &__title {
+      display: flex;
+      justify-content: center;
+      padding: 10px;
+      background-color: #1c1d1d;
+      color: white;
+      img {
+        width: 20px;
+        height: 20px;
+        margin-right: 10px;
+      }
+    }
+
+    &__menu {
+      display: flex;
+      justify-content: space-around;
+      padding: 10px;
+      background-color: #434343;
+      color: white;
+
+      &left {
+        width: 50%;
+      }
+      &right {
+        display: flex;
+        justify-content: space-around;
+        width: 50%;
+      }
+    }
+
+    &__item {
+      display: flex;
+      justify-content: space-around;
+      padding: 15px;
+
+      &:nth-child(odd) {
+        background-color: #eff0f0;
+      }
+
+      &:nth-child(even) {
+        background-color: white;
+      }
+
+      &left,
+      &right {
+        display: flex;
+        justify-content: space-around;
+        width: 50%;
+      }
+
+      img {
+        width: 20px;
+        height: 20px;
+      }
+    }
+  }
 }
